# doc-demo

./: .augmentignore  .doppler.yaml  .editorconfig  .env.example  .gitignore  README.md  package-lock.json  package.json
apps/addon/: .gitignore  Code.gs  README.md  TESTING.md  appsscript.json  package.json  settings.html  setup.sh  sidebar.html
apps/backend/: .railwayignore  pyproject.toml  railway.toml  test_server.py
apps/backend/src/agent_api/: __init__.py  config.py  main.py  supabase_client.py
apps/backend/src/agent_api/agents/: semantic_checker.py
apps/backend/src/agent_api/prompts/: __init__.py  compliance_prompts.py
apps/backend/src/agent_api/routers/: ai_chat.py  pdf.py  workbench.py
apps/backend/src/agent_api/services/: langchain_ai_service.py
apps/frontend/: .vercelignore  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
apps/frontend/app/: layout.tsx
apps/frontend/app/(protected)/: layout.tsx
apps/frontend/components/app/: app-navigation.tsx  brand-logo.tsx  create-organization-modal.tsx  delete-organization-modal.tsx  delete-project-modal.tsx  requirements-document-viewer.tsx  (+6 more)
apps/frontend/public/: privacy-policy.html
apps/frontend/types/: database.ts  index.ts
docs/: BUG_FIXES.md  DEPLOYMENT.md  GOOGLE_DOCS_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  PRIVACY_POLICY_SETUP.md  QUICK_START.md  SETUP_GOOGLE_DOCS.md  TODO.md  defense-demo-database-setup.md
tools/scripts/: deploy-backend.sh  deploy-frontend.sh  env-pull.sh  find-ports.sh  setup.sh  test-env.sh
(+54 files in other folders)
